# spellout

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  index.xml  sitemap.xml
.bin/: update_version.sh
.github/disabled_workflows/: cross-compile.yaml
.github/workflows/: build.yaml  cross-compile.yaml  publish.yaml  versionup.yaml
about/: index.html
assets/codes/: denmark.txt  din5009.txt  din5009_1983.txt  norway.txt  oenorma_a_1081.txt  switzerland.txt
assets/completions/bash/: spellout
assets/completions/elvish/: spellout
assets/completions/fish/: spellout
assets/completions/powershell/: spellout
assets/completions/zsh/: _spellout
assets/vhs/: create_demo.sh  demo.tape
categories/: index.html  index.xml
cli/: README.md  gencomp.rs  main.rs
containers/: build.sh
containers/no_features_glibc/: Containerfile
containers/no_features_musl/: Containerfile
containers/unicode_normalization_glibc/: Containerfile
containers/unicode_normalization_musl/: Containerfile
docs/: config.toml  go.mod  go.sum
docs/content/: _index.md  about.md  install.md  usage.md
docs/resources/: logo.pptx
install/: index.html
src/: codes.rs  lib.rs
src/codes/: chp.rs  english.rs  eu.rs  france.rs  international.rs  italia.rs  japanese.rs  nato.rs  netherlands.rs  sweden.rs  uk.rs
tags/: index.html  index.xml
testdata/: custom_codes.txt
usage/: index.html
