[package]
name = "spellout"
description = "A phonetic code encoder/decoder"
license-file = "LICENSE"
repository = "https://github.com/tamada/spellout"
version = "0.1.1"
edition = "2024"
authors = [
    "Haruaki Tamada <tamada@users.noreply.github.com>"
]
categories = ["command-line-utilities", "encoding"]
keywords = [ "phonetic-code", "nato", "unicode" ]

[features]
default = []
normalization = [ "unicode-normalization" ]

[dependencies]
clap = { version = "4.5.60", features = [ "derive" ] }
clap_complete = "4.5.66"
include_dir = "0.7.4"
log = "0.4.29"
unicode-normalization = { version = "0.1.25", optional = true }

[[bin]]
name = "spellout"
path = "cli/main.rs"
